test/field/set_evaluation_order.lox
undefined1.bar // error: expect expression
  = undefined2